# jukbx-old

./: README.md  TODO.md  about.html  index.html  library_manager.html  package-lock.json  package.json  settings.html  splashscreen.html  vite.config.ts
src/: App.svelte  styles.css
src-tauri/: .env  .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-03-17-224718_library/: down.sql  up.sql
src-tauri/src/: cmd.rs  main.rs  models.rs  schema.rs
src-tauri/src/db/: add.rs  database.rs  mod.rs
src-tauri/src/log/: mod.rs  tag_error.rs
src-tauri/src/metadata/: image_extractor.rs  mod.rs  tag_extractor.rs
src-tauri/src/metadata/lrc/: get.rs  mod.rs  parser.rs  structs.rs
src/components/: menu.svelte  slider.svelte  statusbar.svelte  table.svelte  titlebar-menu.svelte  titlebar.svelte
src/components/player/: lyrics.svelte  metadata.svelte  player.svelte  visualizer.svelte
src/components/queue/: queue.svelte
src/components/search/: result-box.svelte  search-box.svelte
src/stores/: audio_data.ts  library.ts  playerStatus.ts  queue.ts  song.ts  ui_state.ts
src/ts/: menubar-items.ts
src/types/: event-types.ts  fs-types.ts  library-types.ts  lyrics-types.ts  queue-types.ts  table-types.ts  titlebar-types.ts
src/window/: create-window.ts
src/window/about/: about.svelte  about.ts
src/window/library_manager/: library_manager.svelte  library_manager.ts
src/window/settings/: settings.svelte  settings.ts
src/window/splashscreen/: splashscreen.svelte  splashscreen.ts
