[package]
name = "jukbx"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
    "dialog-save",
    "window-start-dragging",
    "window-set-fullscreen",
    "window-minimize",
    "window-set-title",
    "window-hide",
    "window-close",
    "protocol-asset",
    "notification-all",
    "dialog-open",
    "window-show",
    "window-unminimize",
    "window-set-always-on-top",
    "window-unmaximize",
    "window-create",
    "window-maximize",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.0"
diesel = { version = "2.1.5", features = [
    "sqlite",
    "chrono",
    "64-column-tables",
    "returning_clauses_for_sqlite_3_35",
] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
lofty = "0.18.2"
window-shadows = "0.2.2"
notify = "6.1.1"
regex = "1.10.3"
tauri-plugin-persisted-scope = { version = "0.1.3", features = [
    "protocol-asset",
] }
palette_extract = "0.1.0"
rayon = "1.10.0"
chrono = { version = "0.4.35", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
